force-app/main/default/objects/Department__c/fields/Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Email__c</fullName>
    <label>Department Email</label>
    <description>Primary contact email address for this department.</description>
    <inlineHelpText>Enter the shared inbox or distribution email for this department (e.g. roads@citycouncil.gov.au).</inlineHelpText>
    <type>Email</type>
</CustomField>