force-app/main/default/objects/Department__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <label>Department Head</label>
    <description>The Salesforce User who is the head or manager of this department.</description>
    <inlineHelpText>Select the User record for the department head responsible for managing incidents assigned to this department.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Departments (Department Head)</relationshipLabel>
    <relationshipName>Department_Head_Departments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>