force-app/main/default/objects/Department__c/fields/Department_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Head_Email__c</fullName>
    <label>Head Email</label>
    <description>Direct email address for the department head.</description>
    <inlineHelpText>Enter the personal work email of the department head for direct escalation contact.</inlineHelpText>
    <type>Email</type>
</CustomField>