force-app/main/default/objects/Department__c/fields/Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone__c</fullName>
    <label>Emergency Phone</label>
    <description>24/7 emergency contact phone number for this department.</description>
    <inlineHelpText>Enter the after-hours emergency contact number for urgent incident escalation to this department.</inlineHelpText>
    <type>Phone</type>
</CustomField>