force-app/main/default/objects/Department__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Active</label>
    <description>Indicates whether this department is currently active and available for incident routing.</description>
    <inlineHelpText>Uncheck to deactivate this department so it no longer appears as a routing option for new incidents.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>